--- a/frontend/index.html
+++ b/frontend/index.html
@@ -551,7 +551,7 @@
             addTable(true);
     }
 
-    function addRowWithEx(tableName, exid, exname, exweight, exreps, exsets, exmaxreps, expause)
+    function addRowWithEx(tableName, exid, exname, exweight, exreps, exsets, exmaxreps, expause, note)
     {
         var table = document.getElementById(tableName);
         var rowCount = document.getElementById(tableName).rows.length;
@@ -574,7 +574,7 @@
         cell4.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true' data-placeholder='sets' value=" + exid + " class='title' style=\"display: table-cell; background-color: transparent; color:#7F7F7F; width:10em; min-height: 25px; text-align: center\"/>" + exsets    + "</div></td>";
         cell5.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true' data-placeholder='maxr' value=" + exid + " class='title' style=\"display: table-cell; background-color: transparent; color:#7F7F7F; width:10em; min-height: 25px; text-align: center\"/>" + exmaxreps + "</div></td>";
         cell6.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true' data-placeholder='time' value=" + exid + " class='title' style=\"display: table-cell; background-color: transparent; color:#7F7F7F; width:10em; min-height: 25px; text-align: center\"/>" + expause   + "</div></td>";
-        cell7.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true' data-placeholder='note' value=" + exid + " class='title' style=\"display: table-cell; background-color: transparent; color:#7F7F7F; width:25em; min-height: 25px; text-align: center\"/>" + "NOTE"   + "</div></td>";
+        cell7.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true' data-placeholder='note' value=" + exid + " class='title' style=\"display: table-cell; background-color: transparent; color:#7F7F7F; width:25em; min-height: 25px; text-align: center\"/>" + note + "</div></td>";
         cell8.innerHTML = "<button style='background: #222222; color: #28AD5F; font-style=bold; float: right' onclick='deleteRow(" + tableName + ", "+ rowCount + ")'>&nbsp<i class='fas fa-times-circle'></i></i></button>";
         
         // Needed for exctracting the data, maybe rename attribute
@@ -1221,7 +1221,8 @@
                            , json.plan[i].day[j].exercise.reps
                            , json.plan[i].day[j].exercise.sets
                            , json.plan[i].day[j].exercise.maxrep
-                           , json.plan[i].day[j].exercise.pause);
+                           , json.plan[i].day[j].exercise.pause 
+                           , json.plan[i].day[j].exercise.note );
             }
         }
 
