--- a/frontend/stats.html
+++ b/frontend/stats.html
@@ -50,6 +50,7 @@
 
             Swal.fire({
               type: type,
+              customClass: mobile_swal,
               title: title,
               html: footer
             })
@@ -60,6 +61,7 @@
             {
                 swal.fire({
                     title: 'Loading your data...',
+                    customClass: mobile_swal,
                     allowEscapeKey: false,
                     allowOutsideClick: false,
                     onOpen: () => {
@@ -322,8 +324,13 @@
 
     // global variable to handle the creation and destruction of chart easily
     var chart;
+    
     // global variable to handle the creation and destruction of different chart easily, line = default
     var chart_type = 'line';
+
+    // Here the class is set for the swal to use, depending on mobile or desktop, desktop leave empty - mobile is set in customize_mobile
+    var mobile_swal = '';             
+
 
     function download() 
     {
@@ -800,7 +807,7 @@
             var json = JSON.parse(values);
 
             document.getElementById("additional-info").innerHTML += '<button id="' + json.base_ex + '" class="button" style="top: 10px; width:80%; margin-left: 10%;">' + ex_name + '</button>'
-            document.getElementById(json.base_ex).setAttribute( "onClick", "Swal.fire({html: '" + parse_base_ex(values, ex_name) + "'});");
+            document.getElementById(json.base_ex).setAttribute( "onClick", "Swal.fire({html: '" + parse_base_ex(values, ex_name) + ", customClass: mobile_swal'});");
 
             // Needs to be called here to style the progress dialog which is created dynamically
             if(isMobile.any() ) 
@@ -1159,6 +1166,8 @@
 
     function customize_mobile(after_startup)
     {
+        mobile_swal = 'mobile_swal';
+
         document.getElementById("headerforbuttons").style.height = "100px";
         chart.options.legend.labels.fontSize = 30;
         
