--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -211,8 +211,8 @@
         <canvas id="line-chart" height="100"></canvas>
     </div>
 
-    <div id="container">
-        <div id="additional-info" style="width: 100%; margin-bottom: 2%">
+    <div id="container_bm">
+        <div id="additional-info" style="width: 100%; margin-bottom: 2%; display: flex; flex-direction: row; flex-wrap: nowrap;justify-content: space-between;">
             <!--<button onclick="window.location.href='index.html'" class="button" style="top: 10px; margin-left: 10%;"><i class="fas fa-home"></i> Home</button>  -->
 
             <div id="check-2" class="page__toggle"  style="margin-top: 10px; margin: auto; width: 40%;">
@@ -222,6 +222,7 @@
                         <span class="toggle__text">Active</span>
                     </span>
                 </label>
+            </div>
 
                 <div class="select" style="border-bottom: 4px solid rgba(0,0,0, 0.12); border-right: 4px solid rgba(0,0,0, 0.12); ">
                     <select id= "select" onchange="closeNav(); display_ex();" class="select-text" required >
@@ -244,6 +245,7 @@
                             </label>
                         <span class="select-bar"></span>
                     </div>
+                </div>
             </div>
         </div>
 
