--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -88,7 +88,7 @@
                     // alert('Successfully authenticated'); 
                     console.log('Successfully authenticated'); 
                 
-                    username = keycloak.idTokenParsed.name;
+                    username = keycloak.idTokenParsed.preferred_username;
                     username = username.toLowerCase();
                     check_roles(keycloak.realmAccess.roles);
                 
