--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -174,6 +174,7 @@
             </span>
             </label>
         </div>
+
         <div class="page__toggle" style="margin-left: 20%; margin-top: 5%;">
             <label class="toggle">
             <input id="checks-checkbox-ui" onclick="simplify_ui_partly(); save_settings();" class="toggle__input" type="checkbox">
@@ -215,7 +216,7 @@
         <div id="additional-info" style="width: 100%; margin-bottom: 2%; display: flex; flex-direction: row; flex-wrap: nowrap;justify-content: space-between;">
             <!--<button onclick="window.location.href='index.html'" class="button" style="top: 10px; margin-left: 10%;"><i class="fas fa-home"></i> Home</button>  -->
 
-            <div id="check-2" class="page__toggle"  style="margin-top: 10px; margin: auto; width: 40%;">
+            <div id="check-2" class="page__toggle"  style="margin-top: 10px; margin: auto;  margin-left:5%; ">
                 <label class="toggle">
                     <input id="reps_box" onchange="closeNav();" onclick="save_settings(); update_chart();"  class="toggle__input" type="checkbox" checked>
                     <span class="toggle__label">
@@ -224,41 +225,40 @@
                 </label>
             </div>
 
-                <div class="select" style="border-bottom: 4px solid rgba(0,0,0, 0.12); border-right: 4px solid rgba(0,0,0, 0.12); ">
-                    <select id= "select" onchange="closeNav(); display_ex();" class="select-text" required >
-                        <option value="" selected></option>
-                    </select>
-                    <span class="select-highlight"></span>
-                    <label id="select-text" style="font-size: 22px;" class="select-label">UOM
-                    <i class="fas fa-info-circle" rel="tooltip" title="Select an exercise from this list to have the history (if existent) of your data displayed in the chart above  " id="info-step-1"></i>
-                        </label>
-                    <span class="select-bar"></span>
-                </div>
+            <input type="text" id="value_name" style="width: 25%; margin-left:5%; margin-right:5%">
+            <input type="text" id="value_value"style="width: 25%; margin-rigth:5%">
 
-                <div class="select" style="border-bottom: 4px solid rgba(0,0,0, 0.12); border-right: 4px solid rgba(0,0,0, 0.12); ">
-                        <select id= "select" onchange="closeNav(); display_ex();" class="select-text" required >
-                            <option value="" selected></option>
-                        </select>
-                        <span class="select-highlight"></span>
-                        <label id="select-text" style="font-size: 22px;" class="select-label">Time of Day
-                        <i class="fas fa-info-circle" rel="tooltip" title="Select an exercise from this list to have the history (if existent) of your data displayed in the chart above  " id="info-step-1"></i>
-                            </label>
-                        <span class="select-bar"></span>
-                    </div>
-                </div>
+            <div class="select" style="border-bottom: 4px solid rgba(0,0,0, 0.12); border-right: 4px solid rgba(0,0,0, 0.12); margin-left:5%; margin-right: 5%">
+                <select id= "select" onchange="closeNav(); display_ex();" class="select-text" required >
+                    <option value="" selected></option>
+                </select>
+                <span class="select-highlight"></span>
+                <label id="select-text" style="font-size: 22px;" class="select-label">UOM
+                <i class="fas fa-info-circle" rel="tooltip" title="Select an exercise from this list to have the history (if existent) of your data displayed in the chart above  " id="info-step-1"></i>
+                    </label>
+                <span class="select-bar"></span>
             </div>
-        </div>
 
-        <div id="additional-info" style="width: 100%; margin-bottom: 2%">
-            <button onclick="window.location.href='index.html'" class="button" style="top: 10px; width:80%; margin-left: 10%;"><i class="fas fa-home"></i> Home</button>  
-        </div>
-
-        <div id="additional-info" style="width: 100%">
-            <button onclick="window.location.href='index.html'" class="button" style="top: 10px; width:80%; margin-left: 10%;"><i class="fas fa-home"></i> Home</button>  
+            <div class="select" style="border-bottom: 4px solid rgba(0,0,0, 0.12); border-right: 4px solid rgba(0,0,0, 0.12); margin-right: 5%">
+                <select id= "select" onchange="closeNav(); display_ex();" class="select-text" required >
+                    <option value="" selected></option>
+                </select>
+                <span class="select-highlight"></span>
+                <label id="select-text" style="font-size: 22px;" class="select-label">Time of Day
+                <i class="fas fa-info-circle" rel="tooltip" title="Select an exercise from this list to have the history (if existent) of your data displayed in the chart above  " id="info-step-1"></i>
+                </label>
+                <span class="select-bar"></span>
+            </div>
         </div>
     </div>
 
-        
+    <div id="additional-info" style="width: 100%; margin-bottom: 2%">
+        <button onclick="window.location.href='index.html'" class="button" style="top: 10px; width:80%; margin-left: 10%;"><i class="fas fa-home"></i> Home</button>  
+    </div>
+
+    <div id="additional-info" style="width: 100%">
+        <button onclick="window.location.href='index.html'" class="button" style="top: 10px; width:80%; margin-left: 10%;"><i class="fas fa-home"></i> Home</button>  
+    </div>
 </body>
 
 <script>
