--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -223,10 +223,10 @@
                 </label>
             </div>
 
-            <input type="text" id="value_name"  placeholder="&nbsp; Name of input value" style="background: transparent; color:red; width: 25%; margin-left:5%; margin-right:5%">
-            <input type="text" id="value_value" placeholder="&nbsp; Value of input" style="width: 25%; margin-rigth:5%">
+            <input type="text" id="value_name"  placeholder="&nbsp; Enter the name of input value ..." style="background: transparent; color:#00ad5f; width: 25%; font-size: 18px;font-family: Century Gothic; margin-right:5%; margin-left:5%; ">
+            <input type="text" id="value_value" placeholder="&nbsp; Enter the value of input ..."      style="background: transparent; color:#00ad5f; width: 25%; font-size: 18px;font-family: Century Gothic; margin-right:5%">
  
-            <div class="select" style="border-bottom: 4px solid rgba(0,0,0, 0.12); border-right: 4px solid rgba(0,0,0, 0.12); margin-left:5%; margin-right: 5%">
+            <div class="select" style="border-bottom: 4px solid rgba(0,0,0, 0.12); border-right: 4px solid rgba(0,0,0, 0.12); margin-right: 5%">
                 <select id= "select" onchange="closeNav(); display_ex();" class="select-text" required >
                     <option value="" selected></option>
                 </select>
