--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -223,8 +223,8 @@
                 </label>
             </div>
 
-            <input type="text" id="value_name"  placeholder="&nbsp; Enter the name of input value ..." style="background: transparent; color:#00ad5f; width: 25%; font-size: 18px;font-family: Century Gothic; margin-right:5%; margin-left:5%; ">
-            <input type="text" id="value_value" placeholder="&nbsp; Enter the value of input ..."      style="background: transparent; color:#00ad5f; width: 25%; font-size: 18px;font-family: Century Gothic; margin-right:5%">
+            <input type="text" id="value_name"  class="input_bm" placeholder="&nbsp; Enter the name of input value ..." style="background: transparent; border-radius: 25px; border: 2px solid #00ad5f; color:#00ad5f; width: 25%; font-size: 18px;font-family: Century Gothic; margin-right:5%; margin-left:5%; ">
+            <input type="text" id="value_value" class="input_bm" placeholder="&nbsp; Enter the value of input ..."      style="background: transparent; border-radius: 25px; border: 2px solid #00ad5f; color:#00ad5f; width: 25%; font-size: 18px;font-family: Century Gothic; margin-right:5%">
  
             <div class="select" style="border-bottom: 4px solid rgba(0,0,0, 0.12); border-right: 4px solid rgba(0,0,0, 0.12); margin-right: 5%">
                 <select id= "select" onchange="closeNav(); display_ex();" class="select-text" required >
