--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -280,6 +280,7 @@
                 "username" : getusername(),
                 "name"     : document.getElementById("additional-info_" + i).querySelector("#value_name").value,
                 "value"    : document.getElementById("additional-info_" + i).querySelector("#value_value").value,
+                "note"    : document.getElementById("additional-info_" + i).querySelector("#note").value,
                 "id"       : document.getElementById("additional-info_" + i).getAttribute('value'),
                 "uom"      : document.getElementById("additional-info_1").querySelector("#select_1").options[document.getElementById("additional-info_1").querySelector("#select_1").selectedIndex].value,
                 "tod"      : document.getElementById("additional-info_1").querySelector("#select_2").options[document.getElementById("additional-info_1").querySelector("#select_2").selectedIndex].value
@@ -501,8 +502,9 @@
                 </label> \
             </div> \
             \
-            <input type="text" ' + ( via_button                   ? 'autofocus' : '') + ' id="value_name"  class="input_bm" placeholder="&nbsp; Enter the name of input value ..." style="text-align:center; background: transparent; border-radius: 25px; border: 2px solid #00ad5f; color:#00ad5f; width: 25%; font-size: 18px;font-family: Century Gothic; margin-right:5%; margin-left:5%; "> \
-            <input type="text" ' + (!via_button && num_input <= 1 ? 'autofocus' : '') + ' id="value_value" class="input_bm" placeholder="&nbsp; Enter the value of input ..."      style="text-align:center; background: transparent; border-radius: 25px; border: 2px solid #00ad5f; color:#00ad5f; width: 25%; font-size: 18px;font-family: Century Gothic; margin-right:5%"> \
+            <input type="text" ' + ( via_button                   ? 'autofocus' : '') + ' id="value_name"  class="input_bm" placeholder="&nbsp; Enter the name of input value ..." style="text-align:center; background: transparent; border-radius: 25px; border: 2px solid #00ad5f; color:#00ad5f; width: 25%; font-size: 18px;font-family: Century Gothic; margin-right:2%; margin-left:2%; "> \
+            <input type="text" ' + (!via_button && num_input <= 1 ? 'autofocus' : '') + ' id="value_value" class="input_bm" placeholder="&nbsp; Value of input ..."      style="text-align:center; background: transparent; border-radius: 25px; border: 2px solid #00ad5f; color:#00ad5f; width: 15%; font-size: 18px;font-family: Century Gothic; margin-right:2%"> \
+            <input type="text" id="note" class="input_bm" placeholder="&nbsp; Note ..." style="text-align:center; background: transparent; border-radius: 25px; border: 2px solid #00ad5f; color:#00ad5f; width: 25%; font-size: 18px;font-family: Century Gothic; margin-right:2%; "> \
             \
             <div class="select" style="border-bottom: 4px solid rgba(0,0,0, 0.12); border-right: 4px solid rgba(0,0,0, 0.12); margin-right: 5%"> \
                 <select id= "select_1" onchange="closeNav();" class="select-text" required > \
@@ -525,7 +527,7 @@
                 </label> \
                 <span class="select-bar"></span> \
             </div> \
-            <button class="button" onclick="console.log(\'delete and reorder: \' + ' + num_input + ')" style="margin-right: 1%"><i class="fas fa-trash"></i></button> \
+            <button class="button" onclick="delete_and_reoder(' + num_input + ')" style="margin-right: 1%"><i class="fas fa-trash"></i></button> \
         </div>';
 
         document.getElementById("container_bm").appendChild(container);
@@ -553,6 +555,11 @@
             console.log(select_tod)
         }
 
+    }
+
+    function delete_and_reoder(num_to_delete)
+    {
+        document.getElementById("additional-info_" + num_to_delete).innerHTML = '';
     }
 
     // #67 Newly added func
